3d Primitives and matrices

--- a/Music Maze/Music Maze.csproj
+++ b/Music Maze/Music Maze.csproj
@@ -84,6 +84,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EquationCuboid.cs" />
+    <Compile Include="EquationRectangle.cs" />
     <Compile Include="EquationTriangle.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Game.cs" />
